# ChooseYourOwnAdventure

./: CMakeLists.txt  CMakePresets.json  README.md  plugin.cpp  pyproject.toml  skyrimse.ppj  vcpkg-configuration.json  vcpkg.json  xmake.lua
Scripts/: QuestWeaverPlayer.pex
Scripts/Source/: QuestWeaverPlayer.psc
api/: pyproject.toml
api/src/choose_your_own_adventure/: app.py
mod/papyrus/: papyrus.ppj  skyrimse.ppj  xmake.lua
mod/papyrus/Scripts/: QuestWeaverPlayer.pex
mod/papyrus/Scripts/Bindings/: ChooseYourOwnAdventure.txt  QuestWeaver.txt
mod/papyrus/Scripts/Source/: CYOA_Helpers.psc  CYOA_MCM.psc  CYOA_PlayerScript.psc  CYOA_Request.psc  ChooseYourOwnAdventure.psc  QuestWeaverPlayer.psc
mod/skse/: .gitignore  plugin.cpp  xmake.lua
mod/skse/include/ChooseYourOwnAdventure/: PapyrusFunctions.h
notebooks/: Generate Voices.ipynb  pyproject.toml
