[project]
name = "chooseyourownadventure"
version = "0.1.0"
description = ""
authors = [{ name = "Mrowr Purr", email = "mrowr.purr@gmail.com" }]
license = { text = "0BSD" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "notebooks @ file:///D:/Code/mrowrpurr/ChooseYourOwnAdventure/notebooks",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
