[project]
name = "choose-your-own-adventure"
version = "0.1.0"
description = "Choose Your Own Adventure - Python library and web API"
authors = [{ name = "Mrowr Purr", email = "mrowr.purr@gmail.com" }]
license = { text = "0BSD" }
requires-python = ">=3.13"
dependencies = ["fastapi (>=0.115.8,<0.116.0)", "uvicorn (>=0.34.0,<0.35.0)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.32.2"

[tool.poe.tasks]
serve = "uvicorn choose_your_own_adventure.app:app --reload"
