[project]
name = "notebooks"
version = "0.1.0"
description = ""
authors = [{ name = "Mrowr Purr", email = "mrowr.purr@gmail.com" }]
license = { text = "0BSD" }
requires-python = ">=3.13"
dependencies = ["ipython (>=8.32.0,<9.0.0)", "ipykernel (>=6.29.5,<7.0.0)", "httpx (>=0.28.1,<0.29.0)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
